[project]
name = "humblechuck-site"
version = "0.1.0"
description = "Charlie Schlinkert's personal site and AWS infrastructure"
requires-python = ">=3.10"
dependencies = [
  "aws-cdk-lib==2.261.0",
  "constructs>=10.0.0,<11.0.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0,<9.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
